changing partner images

--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
           <div class="blog-item-wrapper wow fadeInUp" data-wow-delay="0.3s">
             <div class="blog-item-img">
               <a href="single-post.html">
-                  <img src="img/viessmann-logo.png" alt="">
+                  <img src="img/partners/Viessmann-logo.png" alt="">
                 </a>
             </div>
             <div class="blog-item-text">
@@ -172,7 +172,7 @@
           <div class="blog-item-wrapper wow fadeInUp" data-wow-delay="0.6s">
             <div class="blog-item-img">
               <a href="single-post.html">
-                  <img src="img/vaillant.png" alt="">
+                  <img src="img/partners/vaillant.png" alt="">
                 </a>
             </div>
             <div class="blog-item-text">
@@ -193,7 +193,7 @@
           <div class="blog-item-wrapper wow fadeInUp" data-wow-delay="0.9s">
             <div class="blog-item-img">
               <a href="single-post.html">
-                  <img src="img/daikin.png" alt="">
+                  <img src="img/partners/daikin.png" alt="">
                 </a>
             </div>
             <div class="blog-item-text">
@@ -214,7 +214,7 @@
           <div class="blog-item-wrapper wow fadeInUp" data-wow-delay="0.3s">
             <div class="blog-item-img">
               <a href="single-post.html">
-                  <img src="img/ventilair.png" alt="">
+                  <img src="img/partners/ventilair.png" alt="">
                 </a>
             </div>
             <div class="blog-item-text">
@@ -234,7 +234,7 @@
           <div class="blog-item-wrapper wow fadeInUp" data-wow-delay="0.3s">
             <div class="blog-item-img">
               <a href="single-post.html">
-                  <img src="img/quinn.jpeg" alt="">
+                  <img src="img/partners/quinn.png" alt="">
                 </a>
             </div>
             <div class="blog-item-text">
@@ -254,7 +254,7 @@
           <div class="blog-item-wrapper wow fadeInUp" data-wow-delay="0.3s">
             <div class="blog-item-img">
               <a href="single-post.html">
-                  <img src="img/Jaga-logo.jpg" alt="">
+                  <img src="img/partners/Jaga-logo.png" alt="">
                 </a>
             </div>
             <div class="blog-item-text">
