adding centered images

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="keywords" content="Bootstrap, Landing page, Template, Registration, Landing">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-  <meta name="author" content="Grayrids">
-  <title>Van Der Gracht Stefaan - Centrale Verwarming</title>
+  <meta name="author" content="Glenn Goossens">
+  <title>Van Der Gracht Stefaan <br /> Centrale Verwarming - Sanitair</title>
 
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="css/bootstrap.min.css">
@@ -67,7 +67,7 @@
       <div class="row justify-content-md-center">
         <div class="col-md-10">
           <div class="contents text-center">
-            <h1 class="wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="0.3s">Van Der Gracht Stefaan - Centrale Verwarming</h1>
+            <h1 class="wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="0.3s">Van Der Gracht Stefaan <br /> Centrale Verwarming - Sanitair</h1>
             <p class="lead  wow fadeIn" data-wow-duration="1000ms" data-wow-delay="400ms">
               Uw specialist in centrale verwarming - sanitair - warmtepompen - zonneboilers en ventilatie</p>
             <!--<a href="#" class="btn btn-common wow fadeInUp" data-wow-duration="1000ms" data-wow-delay="400ms"><i class="lnr lnr-download"></i> Download</a>-->
@@ -731,16 +731,6 @@
     <div class="container">
       <div class="row">
         <div class="col-md-12">
-          <div class="social-icons wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="0.3s">
-            <ul>
-              <li class="facebook"><a href="#"><i class="fa fa-facebook"></i></a></li>
-              <li class="twitter"><a href="#"><i class="fa fa-twitter"></i></a></li>
-              <li class="google-plus"><a href="#"><i class="fa fa-google-plus"></i></a></li>
-              <li class="linkedin"><a href="#"><i class="fa fa-linkedin"></i></a></li>
-              <li class="pinterest"><a href="#"><i class="fa fa-pinterest"></i></a></li>
-              <li class="dribbble"><a href="#"><i class="fa fa-dribbble"></i></a></li>
-            </ul>
-          </div>
           <div class="site-info wow fadeInUp" data-wow-duration="1000ms" data-wow-delay="0.3s">
             <p>All copyrights reserved &copy; 2017 - Developed by <a rel="nofollow" href="https://www.glenngoossens.be">Glenn Goossens</a></p>
           </div>
