--- a/index.html
+++ b/index.html
@@ -614,7 +614,7 @@
     <div class="overlay"></div>
     <div class="container">
       <div class="row">
-        <div class="col-sm-6 col-md-4 col-lg-4">
+        <div class="col-sm-12 col-md-6 col-lg-6">
           <div class="wow fadeInUp" data-wow-delay=".2s">
             <div class="facts-item">
               <div class="icon">
@@ -627,7 +627,7 @@
             </div>
           </div>
         </div>
-        <div class="col-sm-6 col-md-4 col-lg-4">
+        <div class="col-sm-12 col-md-6 col-lg-6">
           <div class="wow fadeInUp" data-wow-delay=".4s">
             <div class="facts-item">
               <div class="icon">
@@ -639,7 +639,7 @@
             </div>
           </div>
         </div>
-        <div class="col-sm-6 col-md-4 col-lg-4">
+        <div class="col-sm-12 col-md-6 col-lg-6">
           <div class="wow fadeInUp" data-wow-delay=".6s">
             <div class="facts-item">
               <div class="icon">
@@ -651,12 +651,24 @@
             </div>
           </div>
         </div>
+        <div class="col-sm-12 col-md-6 col-lg-6">
+          <div class="wow fadeInUp" data-wow-delay=".6s">
+            <div class="facts-item">
+              <div class="icon">
+                <i class="lnr lnr-envelope"></i>
+              </div>
+              <div class="fact-count">
+                <h3>info@vdgverwarming.be</h3>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
   </div>
   <!--Counter Section End -->
 
-  <!-- Contact Section Start -->
+  <!-- Contact Section Start
   <section id="contact" class="section">
     <div class="container">
       <div class="row justify-content-md-center">
@@ -704,7 +716,7 @@
       </div>
     </div>
   </section>
-  <!-- Contact Section End -->
+  Contact Section End -->
 
   <!-- Subcribe Section Start
   <div id="subscribe" class="section">
